修改样式调整JS 功能。

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Inspire</title>
+    <link href="https://fonts.css.network/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
