--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Inspire</title>
-    <!-- <link href="https://fonts.css.network/css?family=Roboto" rel="stylesheet"> -->
+    <link href="https://fonts.css.network/css?family=Roboto:300,400,700,900" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
