fix detail & add meiqia QA button

--- a/index.html
+++ b/index.html
@@ -2,11 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Inspire</title>
-    <link href="https://fonts.css.network/css?family=Roboto:300,400,700,900" rel="stylesheet">
+    <title>UInspire.io | G_Lab</title>
+    <link rel="icon" type="image/png" href="http://inspire-static.oss-cn-beijing.aliyuncs.com/favicon.png">
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type='text/javascript'>
+    (function(m, ei, q, i, a, j, s) {
+        m[i] = m[i] || function() {
+            (m[i].a = m[i].a || []).push(arguments)
+        };
+        j = ei.createElement(q),
+            s = ei.getElementsByTagName(q)[0];
+        j.async = true;
+        j.charset = 'UTF-8';
+        j.src = '//static.meiqia.com/dist/meiqia.js';
+        s.parentNode.insertBefore(j, s);
+    })(window, document, 'script', '_MEIQIA');
+    _MEIQIA('entId', 45534);
+</script>
   </body>
 </html>
