--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script type='text/javascript'>
+<!--     <script type='text/javascript'>
     (function(m, ei, q, i, a, j, s) {
         m[i] = m[i] || function() {
             (m[i].a = m[i].a || []).push(arguments)
@@ -21,6 +21,6 @@
         s.parentNode.insertBefore(j, s);
     })(window, document, 'script', '_MEIQIA');
     _MEIQIA('entId', 45534);
-</script>
+</script> -->
   </body>
 </html>
