--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <!-- 美洽客服 -->
-    <script type='text/javascript'>
+   <!--  <script type='text/javascript'>
         (function(m, ei, q, i, a, j, s) {
             m[i] = m[i] || function() {
                 (m[i].a = m[i].a || []).push(arguments)
@@ -22,7 +22,7 @@
             s.parentNode.insertBefore(j, s);
         })(window, document, 'script', '_MEIQIA');
         _MEIQIA('entId', 45534);
-    </script>
+    </script> -->
     <!-- 百度统计 -->
     <script>
         var _hmt = _hmt || [];
